Legger til info om søker er sammen med barnet i sykdomssteget.